Add ssh and https repos options

--- a/README.org
+++ b/README.org
@@ -20,8 +20,22 @@
 
    #+BEGIN_SRC sh
      sudo apt update && sudo apt install -y wget python3-vcstool
-     mkdir -p ~/smart_cage_ws/src
-     cd ~/smart_cage_ws
-     wget https://raw.githubusercontent.com/janelia-ros/smart_cage_ros/master/smart_cage.repos
-     vcs import src < smart_cage.repos
    #+END_SRC
+
+*** HTTPS
+
+    #+BEGIN_SRC sh
+      mkdir -p ~/smart_cage_ws/src
+      cd ~/smart_cage_ws
+      wget https://raw.githubusercontent.com/janelia-ros/smart_cage_ros/master/smart_cage_https.repos
+      vcs import src < smart_cage_https.repos
+    #+END_SRC
+
+*** SSH
+
+    #+BEGIN_SRC sh
+      mkdir -p ~/smart_cage_ws/src
+      cd ~/smart_cage_ws
+      wget https://raw.githubusercontent.com/janelia-ros/smart_cage_ros/master/smart_cage_ssh.repos
+      vcs import src < smart_cage_ssh.repos
+    #+END_SRC
