--- a/README.org
+++ b/README.org
@@ -19,7 +19,16 @@
 ** Linux
 
    #+BEGIN_SRC sh
-     sudo apt update && sudo apt install -y wget python3-vcstool
+     sudo apt update && sudo apt install curl gnupg2 lsb-release
+     curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+     sudo sh -c 'echo "deb [arch=amd64,arm64] http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list'
+     sudo apt update
+     sudo apt install ros-bouncy-desktop
+   #+END_SRC
+
+   #+BEGIN_SRC sh
+     sudo apt update
+     sudo apt install -y wget python3-vcstool
    #+END_SRC
 
 *** HTTPS
