--- a/smart_cage_data_writer/README.org
+++ b/smart_cage_data_writer/README.org
@@ -25,6 +25,5 @@
 
   #+BEGIN_SRC sh
     ros2 launch smart_cage_data_writer data_writer.launch.py
-    ros2 topic pub -1 /data_writer_control smart_cage_msgs/DataWriterControl "{save_data: true}"
-    ros2 topic pub -1 /data_writer_control smart_cage_msgs/DataWriterControl "{save_data: false}"
+    ros2 topic pub -1 /data_writer_control smart_cage_msgs/DataWriterControl "{mouse_name: HC34}"
   #+END_SRC
