--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@
      sudo sh -c 'echo "deb [arch=amd64,arm64] http://packages.ros.org/ros2/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros2-latest.list'
      sudo apt update
      sudo apt install ros-bouncy-desktop
+     sudo apt install python3-opencv
    #+END_SRC
 
    #+BEGIN_SRC sh
