--- a/smart_cage_msgs/README.org
+++ b/smart_cage_msgs/README.org
@@ -1,6 +1,6 @@
 #+TITLE: Smart Cage ROS Messages
 #+AUTHOR: Peter Polidoro
-#+EMAIL: peterpolidoro@gmail.com
+#+EMAIL: peter@polidoro.io
 
 * Library Information
   - Name :: Smart Cage ROS Messages
@@ -8,7 +8,7 @@
   - License :: BSD
   - URL :: https://github.com/janelia-ros/smart_cage_ros
   - Author :: Peter Polidoro
-  - Email :: peterpolidoro@gmail.com
+  - Email :: peter@polidoro.io
 
 ** Description
 
